--- a/_layouts/website/header.html
+++ b/_layouts/website/header.html
@@ -1,4 +1,4 @@
-<div class="alert hints-alert">
+<div class="alert-danger hints-alert">
     <div class="hints-icon"><i class="fa fa-exclamation-circle"></i></div>
     <div class="hints-container">
         <p>This is the legacy documentation of the amazee.io infrastructure. If you are using Lagoon please head over
